[tool.poetry]
name = "imdb-scraper"
version = "0.1.0"
description = "A simple IMDB scraper which scrapes first 50 films listed"
authors = ["Navaneeth K M <navaneethkm004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
